force-app/main/default/objects/Orga_Taxes__c/fields/Code_Internal1__c.field-meta.xml
<CustomField>
    <fullName>Code_Internal1__c</fullName>
    <label>Code Internal1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>