force-app/main/default/objects/Orga_Taxes__c/fields/Code_Partner1__c.field-meta.xml
<CustomField>
    <fullName>Code_Partner1__c</fullName>
    <label>Code Partner1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>