force-app/main/default/objects/Orga_Taxes__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>