force-app/main/default/objects/Orga_Taxes__c/fields/GTIN__c.field-meta.xml
<CustomField>
    <fullName>GTIN__c</fullName>
    <label>GTIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>