force-app/main/default/objects/Orga_Taxes__c/fields/Orga_BU_Target__c.field-meta.xml
<CustomField>
    <fullName>Orga_BU_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Target</label>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipName>Orga_Taxes1</relationshipName>
    <type>Lookup</type>
</CustomField>