force-app/main/default/objects/Orga_Taxes__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Apply the tax on the Amount wo Tax + all taxes on the lower ranks</description>
    <inlineHelpText>Apply the tax on the Amount wo Tax + all taxes on the lower ranks</inlineHelpText>
    <label>Ranking</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>