force-app/main/default/objects/Orga_Taxes__c/fields/Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Status_BDate__c</fullName>
    <label>Status Begin Date</label>
    <type>Date</type>
</CustomField>