force-app/main/default/objects/Orga_Taxes__c/fields/Tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_amount__c</fullName>
    <label>Valeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>