force-app/main/default/objects/Orga_Taxes__c/fields/Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name__c</fullName>
    <label>Tax Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>