force-app/main/default/objects/Orga_Taxes__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Tax_amount__c</columns>
    <columns>Ranking__c</columns>
    <filterScope>Mine</filterScope>
    <label>ALL</label>
</ListView>